[package]
name = "txn-delivery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bincode = "1.3.3"
chrono = "0.4.39"
futures-util = "0.3.31"
log = "0.4.22"
quinn = "0.11.6"
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["stream"] }
serde = "1.0.217"
serde_json = "1.0.134"
solana-client = "2.1.7"
solana-connection-cache = "2.1.7"
solana-pubsub-client = "2.1.7"
solana-quic-client = "2.1.7"
solana-rpc-client = "2.1.7"
solana-rpc-client-api = "2.1.7"
solana-sdk = "2.1.7"
solana-streamer = "2.1.7"
solana-tpu-client = "2.1.7"
thiserror = "2.0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
